<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.capspro.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.dicoding.capspro.ui.report.ReportFragment"
        android:label="@string/title_lapor"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.dicoding.capspro.ui.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />

    <activity
        android:id="@+id/mapsActivity"
        android:name="com.dicoding.capspro.MapsActivity"
        android:label="activity_maps"
        tools:layout="@layout/activity_maps" />

</navigation>