<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgsplash"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">


    <ImageView
        android:id="@+id/imageView_hacpro"
        android:layout_width="206dp"
        android:layout_height="186dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appa" />


    <TextView
        android:id="@+id/tv_NamaApp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asap"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_hacpro" />

    <TextView
        android:id="@+id/tv_Deskripsi"
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:layout_marginTop="334dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/asap"
        android:text="@string/desc_log"
        android:textAlignment="center"
        android:textColor="#8BC34A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_opt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans"
        android:text="@string/login_with"
        android:textColor="@color/teal_700"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/tv_Deskripsi"
        app:layout_constraintTop_toBottomOf="@+id/tv_Deskripsi" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_btn"
        android:layout_width="194dp"
        android:layout_height="70dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/apapun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_opt" />

</androidx.constraintlayout.widget.ConstraintLayout>