<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.PostReport">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postReportName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/account">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:maxLength="50"
            tools:layout_editor_absoluteX="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postReportAge"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/postReportName"
        app:startIconDrawable="@drawable/age">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="3"
            tools:layout_editor_absoluteX="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/postReportGender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Kelamin"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/postReportAge"
        app:layout_constraintTop_toBottomOf="@+id/postReportAge" />

    <RadioGroup
        android:id="@+id/postReportGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/postReportGender_label"
        tools:layout_editor_absoluteX="16dp">

        <RadioButton
            android:id="@+id/postReportGender_L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:checked="true"
            android:text="Laki-Laki" />

        <RadioButton
            android:id="@+id/postReportGender_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Perempuan" />


    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postReportLocation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@+id/postReportGender"
        app:startIconDrawable="@drawable/location">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownHeight="150dp"
            android:hint="@string/location"
            android:inputType="none"
            android:padding="16dp"
            android:text="Aceh"
            tools:layout_editor_absoluteX="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postReportContent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/postReportLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Laporan"
            android:maxLength="1000" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/postReportSubmit"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>